add shutdown hook, spotless